@@ -5,6 +5,7 @@ import com.asg.common.lib.dto.request.BillwiseBreakupRequestDto;
 import com.asg.common.lib.dto.request.LogRequestDto;
 import com.asg.common.lib.dto.response.GlVoucherLoadBillwiseBreakupResponseDto;
 import com.asg.common.lib.dto.response.LoadBillwiseBreakupResponseDto;
+import com.asg.common.lib.exception.AsgException;
 import com.asg.common.lib.exception.ResourceNotFoundException;
 import com.asg.common.lib.security.util.UserContext;
 import com.asg.common.lib.service.*;
@@ -12,17 +13,13 @@ import com.asg.common.lib.enums.LogDetailsEnum;
 import com.asg.common.lib.service.DocumentDeleteService;
 import com.asg.common.lib.utility.DateUtil;
 import com.asg.finance.annotation.PerformGlPosting;
+import com.asg.finance.entity.*;
 import com.asg.finance.repository.GLMasterRepository;
 import com.asg.common.lib.service.DocumentSearchService;
 import com.asg.finance.repository.*;
 import com.asg.finance.dto.*;
-import com.asg.finance.entity.GlJournalFaCapitalization;
-import com.asg.finance.entity.GlJournalVoucherAssetDtl;
-import com.asg.finance.entity.GlJournalVoucherDtl;
-import com.asg.finance.entity.GlJournalVoucherHdr;
 
 import com.asg.finance.entity.key.TransactionDetailKey;
-import com.asg.finance.entity.master.FixedAsset;
 import com.asg.finance.repository.master.FixedAssetRepository;
 import com.asg.common.lib.utility.PaginationUtil;
 import com.asg.finance.service.BillwiseBreakupService;
@@ -38,8 +35,6 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-
-import java.sql.SQLException;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
@@ -63,12 +58,16 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
     public static final String REF_TYPE_GENERAL = "GENERAL";
     public static final String REF_TYPE_ASSET_DISPOSAL = "ASSET_DISPOSAL";
     public static final String REF_TYPE_ASSET_CAPITALIZATION = "ASSET_CAPITALIZATION";
-    public static final String STATUS_POSTED = "POSTED";
-
-    public static final String PROCESS_SCRAP = "SCRAP";
-    public static final String PROCESS_SOLD = "SOLD";
-    public static final String PROCESS_OBSOLETE = "OBSOLETE";
-    public static final String PROCESS_NOT_APPLICABLE = "Not Applicable";
+    private static final String RES_JOURNAL_VOUCHER = "Journal Voucher";
+    private static final String RES_ASSET_DETAIL = "Asset Detail";
+    private static final String RES_ASSET = "Asset";
+    private static final String FIELD_POID = "POID";
+    private static final String FIELD_TRANSACTION_POID = "TRANSACTION_POID";
+    private static final String FIELD_FA_POID = "FA_POID";
+    private static final String FIELD_GL_POID = "glPoid";
+    private static final String CONST_DOC_ID = "400-100";
+    private static final String CREATED_SUCCESS_MSG = "Journal Voucher created successfully";
+    private static final String UPDATED_SUCCESS_MSG = "Journal Voucher updated successfully";
 
     private final GlJournalVoucherHdrRepository glJournalVoucherHdrRepository;
     private final GlJournalVoucherDtlRepository glJournalVoucherDtlRepository;
@@ -101,148 +100,191 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
             validateJournalVoucher(request);
             boolean isMultiCompany = Boolean.TRUE.equals(request.getMultiCompany());
 
-            BigDecimal bhdAmount = request.getBhdAmount() != null ? request.getBhdAmount()
-                    : (request.getCurrencyRate() != null ? request.getAmount().multiply(request.getCurrencyRate())
-                            : request.getAmount());
+            BigDecimal bhdAmount = calculateBhdAmount(request);
 
-            GlJournalVoucherHdr header = GlJournalVoucherHdr.builder()
-                    .transactionDate(request.getTransactionDate() != null ? request.getTransactionDate()
-                            : DateUtil.getCurrentDateInUserTimeZone())
-                    .groupPoid(getGroupId())
-                    .companyPoid(getCompanyId())
-                    .refType(request.getRefType())
-                    .currencyCode(request.getCurrencyCode())
-                    .currencyRate(request.getCurrencyRate())
-                    .amount(request.getAmount())
-                    .bhdAmount(bhdAmount)
-                    .postingNarration(request.getPostingNarration())
-                    .wdvAccountGl(request.getWdvAccountGl())
-                    .multiCompany(isMultiCompany ? FLAG_YES : FLAG_NO)
-                    .remarks(request.getRemarks())
-                    .confidentialRemarks(request.getConfidentialRemarks())
-                    .deleted(FLAG_NO)
-                    .build();
-
+            GlJournalVoucherHdr header = buildJournalVoucherHeader(request, bhdAmount, isMultiCompany);
             header = glJournalVoucherHdrRepository.save(header);
+
             log.info("Journal Voucher header saved - TransactionPoid: {}, DocRef: {}",
                     header.getTransactionPoid(), header.getDocRef());
-            if (REF_TYPE_GENERAL.equalsIgnoreCase(request.getRefType())
-                    && request.getGlDetails() != null) {
-                log.debug("Saving {} GL detail lines", request.getGlDetails().size());
-                request.getGlDetails().forEach(detail -> detail.setActionType("ISCREATED"));
-                saveGlDetails(header, request.getGlDetails(), isMultiCompany, docId);
-            } else if (REF_TYPE_ASSET_DISPOSAL.equalsIgnoreCase(request.getRefType())
-                    && request.getAssetDetails() != null) {
-                log.debug("Saving {} asset disposal detail lines", request.getAssetDetails().size());
-                request.getAssetDetails().forEach(detail -> detail.setActionType("ISCREATED"));
-                saveAssetDetails(header.getTransactionPoid(), request.getAssetDetails());
-                glJournalVoucherAssetDtlRepository.flush();
-                if (!request.getAssetDetails().isEmpty()) {
-                    glJournalVoucherHdrRepository.updateAssetDetail(header.getTransactionPoid());
-                }
-            } else if (REF_TYPE_ASSET_CAPITALIZATION.equalsIgnoreCase(request.getRefType())
-                    && request.getAssetCapitalization() != null) {
-                log.debug("Saving {} asset capitalization detail lines", request.getAssetCapitalization().size());
-                if (request.getGlDetails() != null) {
-                    request.getGlDetails().forEach(detail -> detail.setActionType("ISCREATED"));
-                }
-                request.getAssetCapitalization().forEach(detail -> detail.setActionType("ISCREATED"));
-                saveCapitalizationDetails(header.getTransactionPoid(), request.getAssetCapitalization());
-                if (request.getGlDetails() != null) {
-                    saveGlDetails(header, request.getGlDetails(), isMultiCompany, docId);
-                }
-            }
 
-            log.info("Journal Voucher created successfully - TransactionPoid: {}, DocRef: {}, RefType: {}",
-                    header.getTransactionPoid(), header.getDocRef(), request.getRefType());
+            processDetailsByType(header, request, isMultiCompany, docId);
 
-            // Log the creation
+            log.info("{} created successfully - TransactionPoid: {}, DocRef: {}, RefType: {}",
+                    RES_JOURNAL_VOUCHER, header.getTransactionPoid(), header.getDocRef(), request.getRefType());
+
             String key = header.getTransactionPoid().toString();
             loggingService.createLogSummaryEntry(LogDetailsEnum.CREATED, docId, key);
 
             return JournalVoucherResponse.builder()
                     .transactionPoid(header.getTransactionPoid())
                     .docRef(header.getDocRef())
-                    .message("Journal Voucher created successfully")
+                    .message(CREATED_SUCCESS_MSG)
                     .build();
-        } catch (IllegalArgumentException e) {
-            log.error("Validation error creating Journal Voucher - RefType: {}, Error: {}",
-                    request.getRefType(), e.getMessage());
+        } catch (IllegalArgumentException | ResourceNotFoundException e) {
+            log.error("Validation error creating {} - RefType: {}, Error: {}",
+                    RES_JOURNAL_VOUCHER, request.getRefType(), e.getMessage());
             throw e;
         } catch (Exception e) {
-            log.error("Error creating Journal Voucher - RefType: {}, Error: {}",
-                    request.getRefType(), e.getMessage(), e);
-            throw new RuntimeException("Failed to create journal voucher: " + e.getMessage(), e);
+            log.error("Error creating {} - RefType: {}, Error: {}",
+                    RES_JOURNAL_VOUCHER, request.getRefType(), e.getMessage(), e);
+            throw new AsgException("Failed to create journal voucher: " + e.getMessage(), e);
+        }
+    }
+
+    private BigDecimal calculateBhdAmount(JournalVoucherRequest request) {
+        if (request.getBhdAmount() != null) {
+            return request.getBhdAmount();
+        }
+        if (request.getCurrencyRate() != null) {
+            return request.getAmount().multiply(request.getCurrencyRate());
+        }
+        return request.getAmount();
+    }
+
+    private GlJournalVoucherHdr buildJournalVoucherHeader(JournalVoucherRequest request, BigDecimal bhdAmount,
+            boolean isMultiCompany) {
+        return GlJournalVoucherHdr.builder()
+                .transactionDate(request.getTransactionDate() != null ? request.getTransactionDate()
+                        : DateUtil.getCurrentDateInUserTimeZone())
+                .groupPoid(getGroupId())
+                .companyPoid(getCompanyId())
+                .refType(request.getRefType())
+                .currencyCode(request.getCurrencyCode())
+                .currencyRate(request.getCurrencyRate())
+                .amount(request.getAmount())
+                .bhdAmount(bhdAmount)
+                .postingNarration(request.getPostingNarration())
+                .wdvAccountGl(request.getWdvAccountGl())
+                .multiCompany(isMultiCompany ? FLAG_YES : FLAG_NO)
+                .remarks(request.getRemarks())
+                .confidentialRemarks(request.getConfidentialRemarks())
+                .deleted(FLAG_NO)
+                .build();
+    }
+
+    private void processDetailsByType(GlJournalVoucherHdr header, JournalVoucherRequest request, boolean isMultiCompany,
+            String docId) {
+        String refType = request.getRefType();
+        if (REF_TYPE_GENERAL.equalsIgnoreCase(refType)) {
+            saveGeneralDetails(header, request, isMultiCompany, docId);
+        } else if (REF_TYPE_ASSET_DISPOSAL.equalsIgnoreCase(refType)) {
+            saveAssetDisposalDetails(header, request);
+        } else if (REF_TYPE_ASSET_CAPITALIZATION.equalsIgnoreCase(refType)) {
+            saveAssetCapitalizationDetails(header, request, isMultiCompany, docId);
+        }
+    }
+
+    private void saveGeneralDetails(GlJournalVoucherHdr header, JournalVoucherRequest request, boolean isMultiCompany,
+            String docId) {
+        if (request.getGlDetails() != null) {
+            log.debug("Saving {} GL detail lines", request.getGlDetails().size());
+            request.getGlDetails().forEach(detail -> detail.setActionType(ACTION_ISCREATED));
+            saveGlDetails(header, request.getGlDetails(), isMultiCompany, docId);
+        }
+    }
+
+    private void saveAssetDisposalDetails(GlJournalVoucherHdr header, JournalVoucherRequest request) {
+        if (request.getAssetDetails() != null) {
+            log.debug("Saving {} asset disposal detail lines", request.getAssetDetails().size());
+            request.getAssetDetails().forEach(detail -> detail.setActionType(ACTION_ISCREATED));
+            saveAssetDetails(header.getTransactionPoid(), request.getAssetDetails());
+            glJournalVoucherAssetDtlRepository.flush();
+            if (!request.getAssetDetails().isEmpty()) {
+                glJournalVoucherHdrRepository.updateAssetDetail(header.getTransactionPoid());
+            }
+        }
+    }
+
+    private void saveAssetCapitalizationDetails(GlJournalVoucherHdr header, JournalVoucherRequest request,
+            boolean isMultiCompany, String docId) {
+        if (request.getAssetCapitalization() != null) {
+            log.debug("Saving {} asset capitalization detail lines", request.getAssetCapitalization().size());
+            if (request.getGlDetails() != null) {
+                request.getGlDetails().forEach(detail -> detail.setActionType(ACTION_ISCREATED));
+            }
+            request.getAssetCapitalization().forEach(detail -> detail.setActionType(ACTION_ISCREATED));
+            saveCapitalizationDetails(header.getTransactionPoid(), request.getAssetCapitalization());
+            if (request.getGlDetails() != null) {
+                saveGlDetails(header, request.getGlDetails(), isMultiCompany, docId);
+            }
         }
     }
 
     private void validateJournalVoucher(JournalVoucherRequest request) {
         String refType = getString(request);
+        validateCommonFields(request);
+        handleCurrencyValidation(request);
+        validateSpecificRefType(request, refType);
+    }
+
+    private void validateCommonFields(JournalVoucherRequest request) {
         if (request.getTransactionDate().isAfter(LocalDate.now())) {
             throw new IllegalArgumentException("Transaction date cannot be in the future");
         }
+    }
 
-        if (request.getAmount() == null || request.getAmount().compareTo(BigDecimal.ZERO) <= 0) {
-            throw new IllegalArgumentException("Amount is mandatory and must be greater than 0");
-        }
-
-        if (request.getPostingNarration() == null || request.getPostingNarration().trim().isEmpty()) {
-            throw new IllegalArgumentException("Posting Narration is mandatory");
-        }
-
-        if (request.getCurrencyCode() != null && !request.getCurrencyCode().isBlank()) {
+    private void handleCurrencyValidation(JournalVoucherRequest request) {
+        String currencyCode = request.getCurrencyCode();
+        if (currencyCode != null && !currencyCode.isBlank()) {
             if (request.getCurrencyRate() == null || request.getCurrencyRate().compareTo(BigDecimal.ZERO) <= 0) {
                 throw new IllegalArgumentException("Currency rate must be greater than 0 for foreign currency");
             }
-        }
-
-        try {
-            if (request.getCurrencyCode() != null && !request.getCurrencyCode().isBlank()) {
-                lovDataService.getDetailsByCodeAndLovName(request.getCurrencyCode(), "CURRENCY");
-            }
-        } catch (ResourceNotFoundException e) {
-            throw new ResourceNotFoundException("Currency", "Code", request.getCurrencyCode());
-        }
-
-        switch (refType) {
-            case REF_TYPE_GENERAL -> {
-                if (request.getGlDetails() == null || request.getGlDetails().isEmpty()) {
-                    throw new IllegalArgumentException("At least one GL detail line is required for GENERAL type");
-                }
-                validateGlDetails(request.getGlDetails(), Boolean.TRUE.equals(request.getMultiCompany()));
-                validateDebitCreditBalance(request.getGlDetails());
-            }
-            case REF_TYPE_ASSET_DISPOSAL -> {
-                if (request.getWdvAccountGl() == null) {
-                    log.error("WDV Account GL is required for ASSET_DISPOSAL");
-                    throw new IllegalArgumentException("WDV Account GL is required for ASSET_DISPOSAL type");
-                }
-                if (request.getAssetDetails() == null || request.getAssetDetails().isEmpty()) {
-                    log.error("At least one asset detail line is required for ASSET_DISPOSAL");
-                    throw new IllegalArgumentException(
-                            "At least one asset detail line is required for ASSET_DISPOSAL type");
-                }
-                validateAssetDetailsForDisposal(request.getAssetDetails());
-            }
-            case REF_TYPE_ASSET_CAPITALIZATION -> {
-                if (request.getAssetCapitalization() == null || request.getAssetCapitalization().isEmpty()) {
-                    log.error("At least one asset capitalization line is required for ASSET_CAPITALIZATION");
-                    throw new IllegalArgumentException(
-                            "At least one asset capitalization line is required for ASSET_CAPITALIZATION type");
-                }
-                validateAssetDetailsForCapitalization(request.getAssetCapitalization());
+            try {
+                lovDataService.getDetailsByCodeAndLovName(currencyCode, "CURRENCY");
+            } catch (ResourceNotFoundException e) {
+                throw new ResourceNotFoundException("Currency", "Code", currencyCode);
             }
         }
     }
 
+    private void validateSpecificRefType(JournalVoucherRequest request, String refType) {
+        switch (refType.toUpperCase()) {
+            case REF_TYPE_GENERAL -> validateGeneralType(request);
+            case REF_TYPE_ASSET_DISPOSAL -> validateAssetDisposalType(request);
+            case REF_TYPE_ASSET_CAPITALIZATION -> validateAssetCapitalizationType(request);
+            default -> throw new IllegalArgumentException("Unsupported RefType: " + refType);
+        }
+    }
+
+    private void validateGeneralType(JournalVoucherRequest request) {
+        if (request.getGlDetails() == null || request.getGlDetails().isEmpty()) {
+            throw new IllegalArgumentException("At least one GL detail line is required for GENERAL type");
+        }
+        validateGlDetails(request.getGlDetails(), Boolean.TRUE.equals(request.getMultiCompany()));
+        validateDebitCreditBalance(request.getGlDetails(), calculateBhdAmount(request));
+    }
+
+    private void validateAssetDisposalType(JournalVoucherRequest request) {
+        if (request.getWdvAccountGl() == null) {
+            log.error("WDV Account GL is required for ASSET_DISPOSAL");
+            throw new IllegalArgumentException("WDV Account GL is required for ASSET_DISPOSAL type");
+        }
+        if (request.getAssetDetails() == null || request.getAssetDetails().isEmpty()) {
+            String msg = "At least one asset detail line is required for ASSET_DISPOSAL type";
+            log.error(msg);
+            throw new IllegalArgumentException(msg);
+        }
+        validateAssetDetailsForDisposal(request.getAssetDetails());
+    }
+
+    private void validateAssetCapitalizationType(JournalVoucherRequest request) {
+        if (request.getGlDetails() == null || request.getGlDetails().isEmpty()) {
+            throw new IllegalArgumentException("At least one GL detail line is required for ASSET_CAPITALIZATION type");
+        }
+        if (request.getAssetCapitalization() == null || request.getAssetCapitalization().isEmpty()) {
+            String msg = "At least one asset capitalization line is required for ASSET_CAPITALIZATION type";
+            log.error(msg);
+            throw new IllegalArgumentException(msg);
+        }
+        validateGlDetails(request.getGlDetails(), Boolean.TRUE.equals(request.getMultiCompany()));
+        validateDebitCreditBalance(request.getGlDetails(), calculateBhdAmount(request));
+        validateAssetDetailsForCapitalization(request.getAssetCapitalization());
+        validateCapitalizationNature(request.getGlDetails(), request.getAssetCapitalization());
+    }
+
     private String getString(JournalVoucherRequest request) {
         String refType = request.getRefType();
-        if (refType == null || refType.isBlank()) {
-            throw new IllegalArgumentException("RefType is mandatory");
-        }
-        if (request.getTransactionDate() == null) {
-            throw new IllegalArgumentException("Transaction date is mandatory");
-        }
         if (!REF_TYPE_GENERAL.equalsIgnoreCase(refType) && !REF_TYPE_ASSET_DISPOSAL.equalsIgnoreCase(refType)
                 && !REF_TYPE_ASSET_CAPITALIZATION.equalsIgnoreCase(refType)) {
             throw new IllegalArgumentException("RefType must be GENERAL, ASSET_DISPOSAL, or ASSET_CAPITALIZATION");
@@ -252,41 +294,51 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
 
     private void validateGlDetails(List<JournalVoucherGlDetailDto> glDetails, boolean multiCompany) {
         for (JournalVoucherGlDetailDto detail : glDetails) {
-            if (!TYPE_DEBIT.equalsIgnoreCase(detail.getType()) && !TYPE_CREDIT.equalsIgnoreCase(detail.getType())) {
-                throw new IllegalArgumentException("Type must be 'Dr' or 'Cr'");
-            }
+            validateSingleGlDetail(detail, multiCompany);
+        }
+    }
 
-            if (TYPE_DEBIT.equalsIgnoreCase(detail.getType())) {
-                if (detail.getDrAmt() == null || detail.getDrAmt().compareTo(BigDecimal.ZERO) <= 0) {
-                    throw new IllegalArgumentException("DrAmt must be greater than 0 for Type=Dr");
-                }
-                if (detail.getCrAmt() != null && detail.getCrAmt().compareTo(BigDecimal.ZERO) != 0) {
-                    throw new IllegalArgumentException("CrAmt must be 0 or null for Type=Dr");
-                }
-            } else {
-                if (detail.getCrAmt() == null || detail.getCrAmt().compareTo(BigDecimal.ZERO) <= 0) {
-                    throw new IllegalArgumentException("CrAmt must be greater than 0 for Type=Cr");
-                }
-                if (detail.getDrAmt() != null && detail.getDrAmt().compareTo(BigDecimal.ZERO) != 0) {
-                    throw new IllegalArgumentException("DrAmt must be 0 or null for Type=Cr");
-                }
-            }
+    private void validateSingleGlDetail(JournalVoucherGlDetailDto detail, boolean multiCompany) {
+        String type = detail.getType();
+        if (!TYPE_DEBIT.equalsIgnoreCase(type) && !TYPE_CREDIT.equalsIgnoreCase(type)) {
+            throw new IllegalArgumentException("Type must be 'Dr' or 'Cr'");
+        }
 
-            if (multiCompany && detail.getCompanyPoid() == null) {
-                throw new IllegalArgumentException("CompanyPoid is mandatory for GL detail when multiCompany is true");
-            }
+        if (TYPE_DEBIT.equalsIgnoreCase(type)) {
+            validateDebitAmount(detail);
+        } else {
+            validateCreditAmount(detail);
+        }
 
-            if (detail.getGlPoid() == null) {
-                throw new IllegalArgumentException("GlPoid is mandatory for GL detail");
-            }
+        if (multiCompany && detail.getCompanyPoid() == null) {
+            throw new IllegalArgumentException("CompanyPoid is mandatory for GL detail when multiCompany is true");
+        }
+
+        if (detail.getGlPoid() == null) {
+            throw new IllegalArgumentException("GlPoid is mandatory for GL detail");
+        }
+    }
+
+    private void validateDebitAmount(JournalVoucherGlDetailDto detail) {
+        if (detail.getDrAmt() == null || detail.getDrAmt().compareTo(BigDecimal.ZERO) <= 0) {
+            throw new IllegalArgumentException("DrAmt must be greater than 0 for Type=Dr");
+        }
+        if (detail.getCrAmt() != null && detail.getCrAmt().compareTo(BigDecimal.ZERO) != 0) {
+            throw new IllegalArgumentException("CrAmt must be 0 or null for Type=Dr");
+        }
+    }
+
+    private void validateCreditAmount(JournalVoucherGlDetailDto detail) {
+        if (detail.getCrAmt() == null || detail.getCrAmt().compareTo(BigDecimal.ZERO) <= 0) {
+            throw new IllegalArgumentException("CrAmt must be greater than 0 for Type=Cr");
+        }
+        if (detail.getDrAmt() != null && detail.getDrAmt().compareTo(BigDecimal.ZERO) != 0) {
+            throw new IllegalArgumentException("DrAmt must be 0 or null for Type=Cr");
         }
     }
 
     private void validateAssetDetailsForDisposal(List<JournalVoucherAssetDetailDto> assetDetails) {
         for (JournalVoucherAssetDetailDto detail : assetDetails) {
-            if (detail.getFaPoid() == null) {
-                throw new IllegalArgumentException("FaPoid is mandatory for asset disposal");
-            }
             if (!fixedAssetRepository.existsById(detail.getFaPoid())) {
                 throw new IllegalArgumentException("Invalid asset: " + detail.getFaPoid());
             }
@@ -300,9 +352,6 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
 
     private void validateAssetDetailsForCapitalization(List<JournalVoucherCapitalizationDto> capitalizationDetails) {
         for (JournalVoucherCapitalizationDto detail : capitalizationDetails) {
-            if (detail.getFaPoid() == null) {
-                throw new IllegalArgumentException("FaPoid is mandatory for asset capitalization");
-            }
             if (!fixedAssetRepository.existsById(detail.getFaPoid())) {
                 throw new IllegalArgumentException("Invalid asset: " + detail.getFaPoid());
             }
@@ -314,7 +363,7 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
         }
     }
 
-    private void validateDebitCreditBalance(List<JournalVoucherGlDetailDto> glDetails) {
+    private void validateDebitCreditBalance(List<JournalVoucherGlDetailDto> glDetails, BigDecimal bhdAmount) {
         log.debug("Validating debit/credit balance for {} GL details", glDetails.size());
         BigDecimal totalDr = glDetails.stream()
                 .map(d -> d.getDrAmt() != null ? d.getDrAmt() : BigDecimal.ZERO)
@@ -329,6 +378,38 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
                     totalDr, totalCr, totalDr.subtract(totalCr));
             throw new IllegalArgumentException("Debit total must equal Credit total");
         }
+
+        if (totalCr.compareTo(bhdAmount) != 0) {
+            log.error("Detail total {} does not match header amount {}", totalCr, bhdAmount);
+            throw new IllegalArgumentException(
+                    "Total detail amount (" + totalCr + ") does not match header amount (" + bhdAmount + ")");
+        }
+    }
+
+    private void validateCapitalizationNature(List<JournalVoucherGlDetailDto> glDetails,
+            List<JournalVoucherCapitalizationDto> capitalization) {
+        BigDecimal assetSum = capitalization.stream()
+                .map(d -> d.getAssetValue() != null ? d.getAssetValue() : BigDecimal.ZERO)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        BigDecimal fixedAssetNatureGlTotal = BigDecimal.ZERO;
+
+        for (JournalVoucherGlDetailDto detail : glDetails) {
+            if (TYPE_DEBIT.equalsIgnoreCase(detail.getType())) {
+                GLMaster gl = glMasterRepository.findByGlPoid(detail.getGlPoid())
+                        .orElseThrow(
+                                () -> new ResourceNotFoundException("GL Master", FIELD_GL_POID, detail.getGlPoid()));
+
+                if ("FIXED_ASSET".equalsIgnoreCase(gl.getControlAcNature())) {
+                    fixedAssetNatureGlTotal = fixedAssetNatureGlTotal.add(detail.getDrAmt());
+                }
+            }
+        }
+
+        if (fixedAssetNatureGlTotal.compareTo(assetSum) != 0) {
+            throw new IllegalArgumentException("Asset Item Total (" + assetSum
+                    + ") is not matching with debit to the Asset Group GL total (" + fixedAssetNatureGlTotal + ")");
+        }
     }
 
     private void saveGlDetails(GlJournalVoucherHdr header, List<JournalVoucherGlDetailDto> glDetails,
@@ -336,98 +417,70 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
         Long transactionPoid = header.getTransactionPoid();
         Long headerCompanyPoid = header.getCompanyPoid();
 
+        long maxDetRowId = glJournalVoucherDtlRepository.getMaxDetRowIdByTransactionPoid(transactionPoid);
+
         List<CostCenterBreakupRequestDto> costCenterRequestDtoList = new ArrayList<>();
         List<BillwiseBreakupRequestDto> billwiseRequestDtoList = new ArrayList<>();
         List<LogRequestDto<GlJournalVoucherDtl>> logRequests = new ArrayList<>();
 
         for (JournalVoucherGlDetailDto dto : glDetails) {
-
-            String rawAction = dto.getActionType();
-            String action = (rawAction == null || rawAction.trim().isEmpty())
-                    ? "NOCHANGES"
-                    : rawAction.trim().toUpperCase();
-
-            action = switch (action) {
-                case "ISCREATED", "CREATED", "NEW" -> "ISCREATED";
-                case "ISUPDATED", "UPDATED" -> "ISUPDATED";
-                case "ISDELETED", "DELETED" -> "ISDELETED";
-                default -> "NOCHANGES";
-            };
-
+            String action = resolveAction(dto.getActionType());
             Long companyPoid = multiCompany ? dto.getCompanyPoid() : headerCompanyPoid;
 
             switch (action) {
-                case ACTION_NOCHANGES -> {
-                }
-                case ACTION_ISDELETED -> {
-                    if (dto.getDetRowId() != null) {
-                        glJournalVoucherDtlRepository
-                                .deleteById(new TransactionDetailKey(transactionPoid, dto.getDetRowId()));
-                        loggingService.logDelete(dto, docId, transactionPoid.toString());
-                    }
-                }
                 case ACTION_ISCREATED -> {
-                    validateGLPoid(dto.getGlPoid());
-                    Long detRowId = dto.getDetRowId() != null ? dto.getDetRowId()
-                            : getNextDetRowIdForGl(transactionPoid);
-                    GlJournalVoucherDtl detail = GlJournalVoucherDtl.builder()
-                            .transactionPoid(transactionPoid)
-                            .detRowId(detRowId)
-                            .type(dto.getType())
-                            .companyPoid(companyPoid)
-                            .glPoid(dto.getGlPoid())
-                            .drAmt(dto.getDrAmt())
-                            .crAmt(dto.getCrAmt())
-                            .remarks(dto.getRemarks())
-                            .build();
+                    maxDetRowId++;
+                    GlJournalVoucherDtl detail = new GlJournalVoucherDtl();
+                    BeanUtils.copyProperties(dto, detail);
+                    detail.setTransactionPoid(transactionPoid);
+                    detail.setDetRowId(maxDetRowId);
+                    detail.setCompanyPoid(companyPoid);
                     glJournalVoucherDtlRepository.save(detail);
 
-                    String logDetail = String.format("Row Created on Journal Voucher GL Detail with detRowId: %s",
-                            detRowId);
-                    loggingService.createLogSummaryEntry(docId, transactionPoid.toString(), logDetail);
+                    loggingService.createLogSummaryEntry(docId, transactionPoid.toString(),
+                            String.format("Row Created on %s GL Detail with detRowId: %s", RES_JOURNAL_VOUCHER,
+                                    maxDetRowId));
 
                     if (dto.getCostCenterBreakup() != null && !dto.getCostCenterBreakup().isEmpty()) {
-                        costCenterRequestDtoList.addAll(buildCostCenterBreakups(transactionPoid, detRowId, docId,
-                                dto.getGlPoid(), companyPoid, dto.getCostCenterBreakup()));
+                        costCenterRequestDtoList.addAll(buildCostCenterBreakups(transactionPoid, maxDetRowId, docId,
+                                dto.getGlPoid(), dto.getCostCenterBreakup()));
                     }
                     if (dto.getBillWiseBreakup() != null && !dto.getBillWiseBreakup().isEmpty()) {
-                        billwiseRequestDtoList.addAll(buildBillwiseBreakups(transactionPoid, detRowId, docId,
+                        billwiseRequestDtoList.addAll(buildBillwiseBreakups(transactionPoid, maxDetRowId, docId,
                                 dto.getGlPoid(), companyPoid, dto.getBillWiseBreakup()));
                     }
                 }
                 case ACTION_ISUPDATED -> {
-                    if (!glMasterRepository.existsByGlPoid(dto.getGlPoid())) {
-                        throw new ResourceNotFoundException("Gl Master", "glPoid", dto.getGlPoid());
-                    }
-                    GlJournalVoucherDtl detail = glJournalVoucherDtlRepository.findById(
-                            new TransactionDetailKey(transactionPoid, dto.getDetRowId()))
-                            .orElseThrow(
-                                    () -> new ResourceNotFoundException("GL Detail", "detRowId", dto.getDetRowId()));
+                    GlJournalVoucherDtl detail = glJournalVoucherDtlRepository
+                            .findById(new TransactionDetailKey(transactionPoid, dto.getDetRowId()))
+                            .orElseThrow(() -> new ResourceNotFoundException("GL Detail", "detRowId", dto.getDetRowId()));
 
                     GlJournalVoucherDtl oldDetail = new GlJournalVoucherDtl();
                     BeanUtils.copyProperties(detail, oldDetail);
 
-                    detail.setType(dto.getType());
+                    BeanUtils.copyProperties(dto, detail, "detRowId", "transactionPoid");
                     detail.setCompanyPoid(companyPoid);
-                    detail.setGlPoid(dto.getGlPoid());
-                    detail.setDrAmt(dto.getDrAmt());
-                    detail.setCrAmt(dto.getCrAmt());
-                    detail.setRemarks(dto.getRemarks());
                     glJournalVoucherDtlRepository.save(detail);
 
-                    String logDetail = String.format("KeyId = TRANSACTION_POID:%s DET_ROW_ID:%s", transactionPoid,
+                    String logDetail = String.format("KeyId = %s:%s DET_ROW_ID:%s", FIELD_TRANSACTION_POID,
+                            transactionPoid,
                             dto.getDetRowId());
                     logRequests.add(new LogRequestDto<>(oldDetail, detail, GlJournalVoucherDtl.class, docId,
                             transactionPoid.toString(), logDetail));
 
                     if (dto.getCostCenterBreakup() != null && !dto.getCostCenterBreakup().isEmpty()) {
                         costCenterRequestDtoList.addAll(buildCostCenterBreakups(transactionPoid, dto.getDetRowId(),
-                                docId, dto.getGlPoid(), companyPoid, dto.getCostCenterBreakup()));
+                                docId, dto.getGlPoid(), dto.getCostCenterBreakup()));
                     }
                     if (dto.getBillWiseBreakup() != null && !dto.getBillWiseBreakup().isEmpty()) {
                         billwiseRequestDtoList.addAll(buildBillwiseBreakups(transactionPoid, dto.getDetRowId(), docId,
                                 dto.getGlPoid(), companyPoid, dto.getBillWiseBreakup()));
                     }
+                }
+                case ACTION_ISDELETED -> {
+                    glJournalVoucherDtlRepository
+                            .deleteById(new TransactionDetailKey(transactionPoid, dto.getDetRowId()));
+                    loggingService.logDelete(dto, docId, transactionPoid.toString());
                 }
             }
         }
@@ -443,18 +496,8 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
         }
     }
 
-    private Long getNextDetRowIdForGl(Long transactionPoid) {
-        Long maxId = glJournalVoucherDtlRepository
-                .findAll((root, query, cb) -> cb.equal(root.get("transactionPoid"), transactionPoid))
-                .stream()
-                .map(GlJournalVoucherDtl::getDetRowId)
-                .max(Long::compareTo)
-                .orElse(0L);
-        return maxId + 1;
-    }
-
     private List<CostCenterBreakupRequestDto> buildCostCenterBreakups(Long transactionPoid, Long detRowId, String docId,
-            Long glPoid, Long glCompanyPoid,
+            Long glPoid,
             List<CostCenterBreakupPopupRequestDto> costCenterBreakups) {
         return costCenterBreakups.stream()
                 .map(dto -> CostCenterBreakupRequestDto.builder()
@@ -499,191 +542,111 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
 
     private void saveAssetDetails(Long transactionPoid, List<JournalVoucherAssetDetailDto> assetDetails) {
         String docId = UserContext.getDocumentId();
-        List<GlJournalVoucherAssetDtl> toSave = new ArrayList<>();
-        List<GlJournalVoucherAssetDtl> toUpdate = new ArrayList<>();
-        List<Long> toDelete = new ArrayList<>();
+
+        long maxSn = glJournalVoucherAssetDtlRepository.getMaxDetRowIdByTransactionPoid(transactionPoid);
+
         List<LogRequestDto<GlJournalVoucherAssetDtl>> logRequests = new ArrayList<>();
 
-        List<GlJournalVoucherAssetDtl> existingList = glJournalVoucherAssetDtlRepository
-                .findByTransactionPoid(transactionPoid);
-        Map<Long, GlJournalVoucherAssetDtl> existingMap = existingList.stream()
-                .collect(Collectors.toMap(GlJournalVoucherAssetDtl::getDetRowId, d -> d));
-
-        Long[] maxSn = { existingList.stream()
-                .map(GlJournalVoucherAssetDtl::getDetRowId)
-                .max(Long::compareTo)
-                .orElse(0L) };
-
         for (JournalVoucherAssetDetailDto dto : assetDetails) {
-            String action = dto.getActionType() != null ? dto.getActionType().toUpperCase() : "ISCREATED";
+            String action = resolveAction(dto.getActionType());
             switch (action) {
-                case "ISCREATED":
-                    Long sn = ++maxSn[0];
-                    GlJournalVoucherAssetDtl newDetail = GlJournalVoucherAssetDtl.builder()
-                            .transactionPoid(transactionPoid)
-                            .detRowId(sn)
-                            .faPoid(dto.getFaPoid())
-                            .lifeYear(dto.getLifeYear())
-                            .purchaseDate(dto.getPurchaseDate())
-                            .depreciationStartDate(dto.getDepreciationStartDate())
-                            .assetValue(dto.getAssetValue())
-                            .depreciatedAmt(dto.getDepreciatedAmt())
-                            .wdvValue(dto.getWdvValue())
-                            .process(dto.getProcess())
-                            .scrapSoldDate(dto.getScrapSoldDate())
-                            .scrapSoldValue(dto.getScrapSoldValue())
-                            .remarks(dto.getRemarks())
-                            .build();
-                    toSave.add(newDetail);
-                    break;
-                case "ISUPDATED":
-                    GlJournalVoucherAssetDtl existing = existingMap.get(dto.getSn());
-                    if (existing == null) {
-                        throw new ResourceNotFoundException("Asset Detail", "sn", dto.getSn());
-                    }
+                case ACTION_ISCREATED -> {
+                    maxSn++;
+                    GlJournalVoucherAssetDtl detail = new GlJournalVoucherAssetDtl();
+                    BeanUtils.copyProperties(dto, detail);
+                    detail.setTransactionPoid(transactionPoid);
+                    detail.setDetRowId(maxSn);
+                    glJournalVoucherAssetDtlRepository.save(detail);
+
+                    loggingService.createLogSummaryEntry(docId, transactionPoid.toString(),
+                            String.format("Row Created on %s with sn: %s", RES_ASSET_DETAIL, maxSn));
+                }
+                case ACTION_ISUPDATED -> {
+                    GlJournalVoucherAssetDtl existing = glJournalVoucherAssetDtlRepository
+                            .findById(new TransactionDetailKey(transactionPoid, dto.getDetRowId()))
+                            .orElseThrow(() -> new ResourceNotFoundException(RES_ASSET_DETAIL, "sn", dto.getDetRowId()));
+
                     GlJournalVoucherAssetDtl oldDetail = new GlJournalVoucherAssetDtl();
                     BeanUtils.copyProperties(existing, oldDetail);
-                    existing.setFaPoid(dto.getFaPoid());
-                    existing.setLifeYear(dto.getLifeYear());
-                    existing.setPurchaseDate(dto.getPurchaseDate());
-                    existing.setDepreciationStartDate(dto.getDepreciationStartDate());
-                    existing.setAssetValue(dto.getAssetValue());
-                    existing.setDepreciatedAmt(dto.getDepreciatedAmt());
-                    existing.setWdvValue(dto.getWdvValue());
-                    existing.setProcess(dto.getProcess());
-                    existing.setScrapSoldDate(dto.getScrapSoldDate());
-                    existing.setScrapSoldValue(dto.getScrapSoldValue());
-                    existing.setRemarks(dto.getRemarks());
-                    toUpdate.add(existing);
-                    String logDetail = String.format("KeyId = TRANSACTION_POID:%s DET_ROW_ID:%s", transactionPoid,
-                            dto.getSn());
-                    logRequests.add(new LogRequestDto<>(oldDetail, existing, GlJournalVoucherAssetDtl.class, docId,
-                            transactionPoid.toString(), logDetail));
-                    break;
-                case "ISDELETED":
-                    toDelete.add(dto.getSn());
+
+                    BeanUtils.copyProperties(dto, existing, "detRowId", "transactionPoid");
+                    glJournalVoucherAssetDtlRepository.save(existing);
+
+                    logRequests.add(new LogRequestDto<>(oldDetail, existing, GlJournalVoucherAssetDtl.class,
+                            docId, transactionPoid.toString(), "sn:" + dto.getDetRowId()));
+                }
+                case ACTION_ISDELETED -> {
+                    glJournalVoucherAssetDtlRepository
+                            .deleteById(new TransactionDetailKey(transactionPoid, dto.getDetRowId()));
                     loggingService.logDelete(dto, docId, transactionPoid.toString());
-                    break;
+                }
             }
         }
 
-        if (!toSave.isEmpty()) {
-            List<GlJournalVoucherAssetDtl> saved = glJournalVoucherAssetDtlRepository.saveAll(toSave);
-            saved.forEach(detail -> {
-                String logDetail = String.format("Row Created on Journal Voucher Asset Detail with sn: %s",
-                        detail.getDetRowId());
-                loggingService.createLogSummaryEntry(docId, transactionPoid.toString(), logDetail);
-            });
+        if (!logRequests.isEmpty()) {
+            loggingService.createLogBatch(logRequests);
         }
-        if (!toUpdate.isEmpty()) {
-            glJournalVoucherAssetDtlRepository.saveAll(toUpdate);
-            if (!logRequests.isEmpty()) {
-                loggingService.createLogBatch(logRequests);
-            }
-        }
-        if (!toDelete.isEmpty()) {
-            existingList.stream()
-                    .filter(d -> toDelete.contains(d.getDetRowId()))
-                    .forEach(glJournalVoucherAssetDtlRepository::delete);
+        if (!assetDetails.isEmpty()) {
+            glJournalVoucherHdrRepository.updateAssetDetail(transactionPoid);
         }
     }
 
     private void saveCapitalizationDetails(Long transactionPoid,
             List<JournalVoucherCapitalizationDto> capitalizationDetails) {
         String docId = UserContext.getDocumentId();
-        List<GlJournalFaCapitalization> toSave = new ArrayList<>();
-        List<GlJournalFaCapitalization> toUpdate = new ArrayList<>();
-        List<Long> toDelete = new ArrayList<>();
+
+        long maxSn = glJournalFaCapitalizationRepository.getMaxDetRowIdByTransactionPoid(transactionPoid);
+
         List<LogRequestDto<GlJournalFaCapitalization>> logRequests = new ArrayList<>();
 
-        List<GlJournalFaCapitalization> existingList = glJournalFaCapitalizationRepository
-                .findByTransactionPoid(transactionPoid);
-        Map<Long, GlJournalFaCapitalization> existingMap = existingList.stream()
-                .collect(Collectors.toMap(GlJournalFaCapitalization::getDetRowId, d -> d));
-
-        Long[] maxSn = { existingList.stream()
-                .map(GlJournalFaCapitalization::getDetRowId)
-                .max(Long::compareTo)
-                .orElse(0L) };
-
         for (JournalVoucherCapitalizationDto dto : capitalizationDetails) {
-            String action = dto.getActionType() != null ? dto.getActionType().toUpperCase() : "ISCREATED";
+            String action = resolveAction(dto.getActionType());
             switch (action) {
-                case "ISCREATED":
-                    Long sn = ++maxSn[0];
-                    GlJournalFaCapitalization newDetail = GlJournalFaCapitalization.builder()
-                            .transactionPoid(transactionPoid)
-                            .detRowId(sn)
-                            .faPoid(dto.getFaPoid())
-                            .faDescription(dto.getFaDescription())
-                            .faCategory(dto.getFaCategory())
-                            .assetType(dto.getAssetType())
-                            .assetValue(dto.getAssetValue())
-                            .remarks(dto.getRemarks())
-                            .build();
-                    toSave.add(newDetail);
-                    break;
-                case "ISUPDATED":
-                    GlJournalFaCapitalization existing = existingMap.get(dto.getSn());
-                    if (existing == null) {
-                        throw new ResourceNotFoundException("Capitalization Detail", "sn", dto.getSn());
-                    }
+                case ACTION_ISCREATED -> {
+                    maxSn++;
+                    GlJournalFaCapitalization detail = new GlJournalFaCapitalization();
+                    BeanUtils.copyProperties(dto, detail);
+                    detail.setTransactionPoid(transactionPoid);
+                    detail.setDetRowId(maxSn);
+                    glJournalFaCapitalizationRepository.save(detail);
+
+                    loggingService.createLogSummaryEntry(docId, transactionPoid.toString(),
+                            String.format("Row Created on %s Capitalization Detail with sn: %s",
+                                    RES_JOURNAL_VOUCHER, maxSn));
+                }
+                case ACTION_ISUPDATED -> {
+                    GlJournalFaCapitalization existing = glJournalFaCapitalizationRepository
+                            .findById(new TransactionDetailKey(transactionPoid, dto.getDetRowId()))
+                            .orElseThrow(() -> new ResourceNotFoundException("Capitalization Detail", "sn",
+                                    dto.getDetRowId()));
+
                     GlJournalFaCapitalization oldDetail = new GlJournalFaCapitalization();
                     BeanUtils.copyProperties(existing, oldDetail);
-                    existing.setFaPoid(dto.getFaPoid());
-                    existing.setFaDescription(dto.getFaDescription());
-                    existing.setFaCategory(dto.getFaCategory());
-                    existing.setAssetType(dto.getAssetType());
-                    existing.setAssetValue(dto.getAssetValue());
-                    existing.setRemarks(dto.getRemarks());
-                    toUpdate.add(existing);
-                    String logDetail = String.format("KeyId = TRANSACTION_POID:%s DET_ROW_ID:%s", transactionPoid,
-                            dto.getSn());
-                    logRequests.add(new LogRequestDto<>(oldDetail, existing, GlJournalFaCapitalization.class, docId,
-                            transactionPoid.toString(), logDetail));
-                    break;
-                case "ISDELETED":
-                    toDelete.add(dto.getSn());
+
+                    BeanUtils.copyProperties(dto, existing, "detRowId", "transactionPoid");
+                    glJournalFaCapitalizationRepository.save(existing);
+
+                    logRequests.add(new LogRequestDto<>(oldDetail, existing, GlJournalFaCapitalization.class,
+                            docId, transactionPoid.toString(), "sn:" + dto.getDetRowId()));
+                }
+                case ACTION_ISDELETED -> {
+                    glJournalFaCapitalizationRepository
+                            .deleteById(new TransactionDetailKey(transactionPoid, dto.getDetRowId()));
                     loggingService.logDelete(dto, docId, transactionPoid.toString());
-                    break;
+                }
             }
         }
 
-        if (!toSave.isEmpty()) {
-            List<GlJournalFaCapitalization> saved = glJournalFaCapitalizationRepository.saveAll(toSave);
-            saved.forEach(detail -> {
-                String logDetail = String.format("Row Created on Journal Voucher Capitalization Detail with sn: %s",
-                        detail.getDetRowId());
-                loggingService.createLogSummaryEntry(docId, transactionPoid.toString(), logDetail);
-            });
+        if (!logRequests.isEmpty()) {
+            loggingService.createLogBatch(logRequests);
         }
-        if (!toUpdate.isEmpty()) {
-            glJournalFaCapitalizationRepository.saveAll(toUpdate);
-            if (!logRequests.isEmpty()) {
-                loggingService.createLogBatch(logRequests);
-            }
-        }
-        if (!toDelete.isEmpty()) {
-            existingList.stream()
-                    .filter(d -> toDelete.contains(d.getDetRowId()))
-                    .forEach(glJournalFaCapitalizationRepository::delete);
-        }
-    }
-
-    @Override
-    @Transactional
-    @PerformGlPosting
-    public JournalVoucherResponse updateJournalVoucher(Long transactionPoid, JournalVoucherRequest request,
-            String docId) {
-        JournalVoucherServiceImpl self = applicationContext.getBean(JournalVoucherServiceImpl.class);
-        return self.updateJournalVoucherData(transactionPoid, request, docId);
     }
 
     @Transactional(propagation = Propagation.REQUIRES_NEW)
     public JournalVoucherResponse updateJournalVoucherData(Long transactionPoid, JournalVoucherRequest request,
-            String docId) {
+                                                           String docId) {
         GlJournalVoucherHdr existing = glJournalVoucherHdrRepository.findByTransactionPoid(transactionPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Journal Voucher", "POID", transactionPoid));
+                .orElseThrow(() -> new ResourceNotFoundException(RES_JOURNAL_VOUCHER, FIELD_POID, transactionPoid));
 
         if (!existing.getRefType().equalsIgnoreCase(request.getRefType())) {
             throw new IllegalArgumentException("RefType cannot be changed after creation");
@@ -698,7 +661,7 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
         boolean isMultiCompany = Boolean.TRUE.equals(request.getMultiCompany());
         BigDecimal bhdAmount = request.getBhdAmount() != null ? request.getBhdAmount()
                 : (request.getCurrencyRate() != null ? request.getAmount().multiply(request.getCurrencyRate())
-                        : request.getAmount());
+                   : request.getAmount());
 
         existing.setTransactionDate(request.getTransactionDate() != null ? request.getTransactionDate()
                 : DateUtil.getCurrentDateInUserTimeZone());
@@ -720,7 +683,7 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
         } else if (REF_TYPE_ASSET_DISPOSAL.equalsIgnoreCase(request.getRefType())
                 && request.getAssetDetails() != null) {
             saveAssetDetails(existing.getTransactionPoid(), request.getAssetDetails());
-            
+
             glJournalVoucherAssetDtlRepository.flush();
             if (!request.getAssetDetails().isEmpty()) {
                 glJournalVoucherHdrRepository.updateAssetDetail(existing.getTransactionPoid());
@@ -736,21 +699,31 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
         // Log the update
         String key = transactionPoid.toString();
         loggingService.logChanges(oldEntity, existing, GlJournalVoucherHdr.class,
-                docId, key, LogDetailsEnum.MODIFIED, "TRANSACTION_POID");
+                docId, key, LogDetailsEnum.MODIFIED, FIELD_TRANSACTION_POID);
 
         return JournalVoucherResponse.builder()
                 .transactionPoid(existing.getTransactionPoid())
                 .docRef(existing.getDocRef())
-                .message("Journal Voucher updated successfully")
+                .message(UPDATED_SUCCESS_MSG)
                 .build();
     }
+
+    @Override
+    @Transactional
+    @PerformGlPosting
+    public JournalVoucherResponse updateJournalVoucher(Long transactionPoid, JournalVoucherRequest request,
+            String docId) {
+        JournalVoucherServiceImpl self = applicationContext.getBean(JournalVoucherServiceImpl.class);
+        return self.updateJournalVoucherData(transactionPoid, request, docId);
+    }
+
 
     @Override
     public JournalVoucherDetailResponse getJournalVoucherById(Long transactionPoid) {
 
         GlJournalVoucherHdr hdr = glJournalVoucherHdrRepository
                 .findByTransactionPoid(transactionPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Journal Voucher", "POID", transactionPoid));
+                .orElseThrow(() -> new ResourceNotFoundException(RES_JOURNAL_VOUCHER, FIELD_POID, transactionPoid));
 
         JournalVoucherDetailResponse.JournalVoucherDetailResponseBuilder response = buildBaseResponse(hdr);
 
@@ -779,17 +752,18 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
     @Transactional
     public void deleteJournalVoucher(Long transactionPoid, DeleteReasonDto deleteReasonDto) {
         GlJournalVoucherHdr entity = glJournalVoucherHdrRepository.findByTransactionPoid(transactionPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Journal Voucher", "POID", transactionPoid));
+                .orElseThrow(() -> new ResourceNotFoundException(RES_JOURNAL_VOUCHER, FIELD_POID, transactionPoid));
 
         if (entity.getPostedFromDocId() != null && !entity.getPostedFromDocId().isEmpty()) {
-            log.error("Cannot delete: Journal Voucher has been posted to GL");
-            throw new IllegalStateException("Cannot delete: Journal Voucher has been posted to GL");
+            String msg = "Cannot delete: " + RES_JOURNAL_VOUCHER + " has been posted to GL";
+            log.error(msg);
+            throw new IllegalStateException(msg);
         }
 
         documentDeleteService.deleteDocument(
                 transactionPoid,
                 "GL_JOURNAL_VOUCHER_HDR",
-                "TRANSACTION_POID",
+                FIELD_TRANSACTION_POID,
                 deleteReasonDto,
                 entity.getTransactionDate());
     }
@@ -804,7 +778,7 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
 
         RawSearchResult raw = documentService.search(documentId, filterList, operator, pageable, isDeleted,
                 "POSTING_NARRATION",
-                "TRANSACTION_POID");
+                FIELD_TRANSACTION_POID);
 
         Page<Map<String, Object>> page = new PageImpl<>(raw.records(), pageable, raw.totalRecords());
         return PaginationUtil.wrapPage(page, raw.displayFields());
@@ -816,129 +790,21 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
                 .fetchAssetDepreciationDetails(faPoid);
 
         if (results == null || results.isEmpty()) {
-            throw new ResourceNotFoundException("Asset", "FA_POID", faPoid);
+            throw new ResourceNotFoundException(RES_ASSET, FIELD_FA_POID, faPoid);
         }
 
-        return results.get(0);
+        return results.getFirst();
     }
 
     @Override
-    @Transactional
-    public PostJournalVoucherResponse postJournalVoucher(Long transactionPoid, PostJournalVoucherRequest request,
-            String documentId) {
-        GlJournalVoucherHdr entity = glJournalVoucherHdrRepository.findByTransactionPoid(transactionPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Journal Voucher", "POID", transactionPoid));
-
-        if (REF_TYPE_GENERAL.equalsIgnoreCase(entity.getRefType())) {
-            BigDecimal drTotal = glJournalVoucherDtlRepository.sumDrAmtByTransactionPoid(transactionPoid);
-            BigDecimal crTotal = glJournalVoucherDtlRepository.sumCrAmtByTransactionPoid(transactionPoid);
-            if (drTotal.compareTo(crTotal) != 0) {
-                throw new IllegalStateException("Cannot post: Debit total must equal Credit total");
-            }
-        }
-
-        String postingRef = glJournalVoucherHdrRepository.postJournalVoucher(
-                transactionPoid,
-                entity,
-                documentId);
-
-        glJournalVoucherHdrRepository.save(entity);
-
-        return PostJournalVoucherResponse.builder()
-                .transactionPoid(transactionPoid)
-                .status(STATUS_POSTED)
-                .postingReference(postingRef)
-                .message("Journal Voucher posted successfully")
-                .build();
-    }
-
-    @Override
-    public JournalVoucherTotalsResponse getGlDetailTotals(Long transactionPoid) {
-        GlJournalVoucherHdr entity = glJournalVoucherHdrRepository.findByTransactionPoid(transactionPoid)
-                .orElseThrow(() -> new ResourceNotFoundException("Journal Voucher", "POID", transactionPoid));
-
-        if (!REF_TYPE_GENERAL.equalsIgnoreCase(entity.getRefType())) {
-            throw new IllegalArgumentException("Totals are only applicable for GENERAL ref type");
-        }
-
-        BigDecimal drTotal = glJournalVoucherDtlRepository.sumDrAmtByTransactionPoid(transactionPoid);
-        BigDecimal crTotal = glJournalVoucherDtlRepository.sumCrAmtByTransactionPoid(transactionPoid);
-        BigDecimal difference = drTotal.subtract(crTotal);
-
-        return JournalVoucherTotalsResponse.builder()
-                .drTotal(drTotal)
-                .crTotal(crTotal)
-                .difference(difference)
-                .isBalanced(difference.compareTo(BigDecimal.ZERO) == 0)
-                .build();
-    }
-
-    @Override
-    @Transactional
-    public void updateAssetDetail(Long transactionPoid, Long sn, UpdateAssetDetailRequest request) {
-        // Validate process type
-        if (request.getProcess() != null && !PROCESS_SCRAP.equalsIgnoreCase(request.getProcess())
-                && !PROCESS_SOLD.equalsIgnoreCase(request.getProcess())
-                && !PROCESS_OBSOLETE.equalsIgnoreCase(request.getProcess())
-                && !PROCESS_NOT_APPLICABLE.equalsIgnoreCase(request.getProcess())) {
-            throw new IllegalArgumentException(
-                    "Invalid process type. Must be SCRAP, SOLD, OBSOLETE, or Not Applicable");
-        }
-
-        // Find asset detail
-        GlJournalVoucherAssetDtl detail = glJournalVoucherAssetDtlRepository.findById(
-                new TransactionDetailKey(transactionPoid, sn))
-                .orElseThrow(() -> new ResourceNotFoundException("Asset Detail", "SN", sn));
-
-        // Update asset detail
-        detail.setFaPoid(request.getFaPoid());
-        detail.setProcess(request.getProcess());
-        detail.setScrapSoldValue(request.getScrapSoldValue());
-        detail.setScrapSoldDate(request.getScrapSoldDate());
-        detail.setRemarks(request.getRemarks());
-        glJournalVoucherAssetDtlRepository.save(detail);
-
-        glJournalVoucherHdrRepository.updateAssetDetail(transactionPoid);
-    }
-
-    @Override
-    public JournalVoucherCapitalizationDto getAssetCapitalizationDetails(Long faPoid) throws SQLException {
+    public JournalVoucherCapitalizationDto getAssetCapitalizationDetails(Long faPoid) {
         List<JournalVoucherCapitalizationDto> results = glJournalVoucherHdrRepository.fetchFixedAssetDetails(faPoid);
 
         if (results == null || results.isEmpty()) {
-            throw new ResourceNotFoundException("Asset", "FA_POID", faPoid);
+            throw new ResourceNotFoundException(RES_ASSET, FIELD_FA_POID, faPoid);
         }
 
-        return results.get(0);
-    }
-
-    @Override
-    @Transactional
-    public CreateFixedAssetResponse createFixedAsset(CreateFixedAssetRequest request) {
-        // Validate asset code uniqueness
-        if (fixedAssetRepository.existsByFaCode(request.getFaCode())) {
-            throw new IllegalArgumentException("Asset code already exists: " + request.getFaCode());
-        }
-
-        FixedAsset fixedAsset = FixedAsset.builder()
-                .faCode(request.getFaCode())
-                .faDescription(request.getFaDescription())
-                .assetType(request.getAssetType())
-                .grossValue(request.getAssetValue())
-                .faCategoryPoid(request.getFaCategory())
-                .groupPoid(getGroupId())
-                .companyPoid(getCompanyId())
-                .active(FLAG_YES)
-                .deleted(FLAG_NO)
-                .build();
-
-        fixedAsset = fixedAssetRepository.save(fixedAsset);
-
-        return CreateFixedAssetResponse.builder()
-                .faPoid(fixedAsset.getFaPoid())
-                .faCode(fixedAsset.getFaCode())
-                .message("Fixed Asset created successfully")
-                .build();
+        return results.getFirst();
     }
 
     private JournalVoucherDetailResponse.JournalVoucherDetailResponseBuilder buildBaseResponse(
@@ -974,7 +840,7 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
 
         List<JournalVoucherDetailResponse.GlDetailResponse> glDetails = dtls.stream()
                 .map(dtl -> mapGeneralDetailWithBreakups(dtl, costCenterResponse, billwiseResponse))
-                .collect(Collectors.toList());
+                .toList();
 
         response.glDetails(glDetails);
         response.drTotal(sumAmounts(dtls, GlJournalVoucherDtl::getDrAmt));
@@ -984,7 +850,7 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
     private GlVoucherCostCenterBreakupResponseDto loadAllCostCenterData(Long transactionPoid) {
         try {
             return costCenterBreakupService.loadCostCenterData(
-                    "400-100", transactionPoid, getGroupId(), getCompanyId(), getUserPoid());
+                    UserContext.getDocumentId(), transactionPoid, getGroupId(), getCompanyId(), getUserPoid());
         } catch (Exception e) {
             log.warn("Failed to load cost center breakup for transaction: {}", transactionPoid, e);
             return null;
@@ -994,7 +860,7 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
     private GlVoucherLoadBillwiseBreakupResponseDto loadAllBillwiseData(Long transactionPoid) {
         try {
             return billwiseBreakupService.loadBillwiseBreakup(
-                    getGroupId(), getCompanyId(), "400-100", transactionPoid);
+                    getGroupId(), getCompanyId(), CONST_DOC_ID, transactionPoid);
         } catch (Exception e) {
             log.warn("Failed to load billwise breakup for transaction: {}", transactionPoid, e);
             return null;
@@ -1007,7 +873,7 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
             GlVoucherLoadBillwiseBreakupResponseDto billwiseResponse) {
 
         return JournalVoucherDetailResponse.GlDetailResponse.builder()
-                .sn(dtl.getDetRowId())
+                .detRowId(dtl.getDetRowId())
                 .type(dtl.getType())
                 .companyPoid(toStringOrNull(dtl.getCompanyPoid()))
                 .glPoid(toStringOrNull(dtl.getGlPoid()))
@@ -1041,7 +907,7 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
                     dto.setCostPoid(cc.getCostPoid());
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<LoadBillwiseBreakupResponseDto> filterBillwiseBreakup(
@@ -1066,7 +932,7 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
                     dto.setBillRemarks(bw.getBillRemarks());
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void populateAssetDisposalDetails(
@@ -1077,14 +943,14 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
                 (root, query, cb) -> cb.equal(root.get("transactionPoid"), transactionPoid))
                 .stream()
                 .map(this::mapAssetDisposalDetail)
-                .collect(Collectors.toList());
+                .toList();
 
         response.assetDetails(assetDetails);
     }
 
     private JournalVoucherAssetDetailDto mapAssetDisposalDetail(GlJournalVoucherAssetDtl dtl) {
         return JournalVoucherAssetDetailDto.builder()
-                .sn(dtl.getDetRowId())
+                .detRowId(dtl.getDetRowId())
                 .faPoid(dtl.getFaPoid())
                 .lifeYear(dtl.getLifeYear())
                 .purchaseDate(dtl.getPurchaseDate())
@@ -1107,14 +973,14 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
                 (root, query, cb) -> cb.equal(root.get("transactionPoid"), transactionPoid))
                 .stream()
                 .map(this::mapCapDetail)
-                .collect(Collectors.toList());
+                .toList();
 
         response.assetCapitalization(capDetails);
     }
 
     private JournalVoucherCapitalizationDto mapCapDetail(GlJournalFaCapitalization dtl) {
         return JournalVoucherCapitalizationDto.builder()
-                .sn(dtl.getDetRowId())
+                .detRowId(dtl.getDetRowId())
                 .faPoid(dtl.getFaPoid())
                 .faDescription(dtl.getFaDescription())
                 .faCategory(dtl.getFaCategory())
@@ -1139,17 +1005,20 @@ public class JournalVoucherServiceImpl implements JournalVoucherService {
 
     @Override
     public byte[] print(Long transactionPoid) throws Exception {
-        Map<String, Object> params = printService.buildBaseParams(transactionPoid, "400-100");
+        Map<String, Object> params = printService.buildBaseParams(transactionPoid, CONST_DOC_ID);
         params.put("SUB_GENERAL", printService.load("Finance/GL/JournalVoucher_subreport1.jrxml"));
         params.put("SUB_ASSET_DISPOSAL", printService.load("Finance/GL/JournalVoucherAssetDisposalSubreport2.jrxml"));
         JasperReport mainReport = printService.load("Finance/GL/JournalVoucher.jrxml");
         return printService.fillReportToPdf(mainReport, params, dataSource);
     }
-
-    private void validateGLPoid(Long glPoid) {
-        if (!glMasterRepository.existsByGlPoid(glPoid)) {
-            throw new ResourceNotFoundException("Gl Master", "glPoid", glPoid);
-        }
+    private String resolveAction(String rawAction) {
+        String action = (rawAction == null || rawAction.trim().isEmpty()) ? ACTION_NOCHANGES : rawAction.trim().toUpperCase();
+        return switch (action) {
+            case "ISCREATED", "CREATED", "NEW" -> ACTION_ISCREATED;
+            case "ISUPDATED", "UPDATED" -> ACTION_ISUPDATED;
+            case "ISDELETED", "DELETED" -> ACTION_ISDELETED;
+            default -> ACTION_NOCHANGES;
+        };
     }
 
 }
